ch6/tests/fails/enum.stderr
error: proc-macro derive panicked
 --> tests/fails/enum.rs:3:10
  |
3 | #[derive(Builder)]
  |          ^^^^^^^
  |
  = help: message: not implemented: only implemented for structs with named fields
